<resources>
    <string name="app_name">FoodXy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="product_create">Crear</string>
    <string name="product_msg_loading">Prepando todo…</string>
    <string name="hint_name">Nombre del producto</string>
    <string name="hint_description">Descripción</string>
    <string name="hint_quantity">Cantidad</string>
    <string name="hint_price">Precio</string>
    <string name="product_empty_cart">carrito vacío</string>
    <string name="product_full_cart">Total: $%1$.2f COP</string>
    <string name="product_view_cart">Ver carrito</string>
    <string name="producto_view_cart">Ver carrito</string>

    <string name="cart_title">Carrito de compra</string>
    <string name="cart_pay">Pagar</string>

    <string name="hint_chat">Escibe algo</string>
    <string name="chat_title">Soporte</string>


    <string name="detail_add_to_cart">Añadir al carrito</string>
    <string name="detail_quantity">Disponibles: %1$d</string>
    <string name="detail_total_price">&lt;b>&lt;big>Total: %1$.2f COP&lt;/big>&lt;/b>&lt;br/>(%2$d X $%3$.2f)</string>

    <string name="order_track_shipment">Seguir envío</string>
    <string name="order_status">Estado: %1$s</string>
    <string name="order_id">ID: %1$s</string>
    <string name="order_chat_help">¿Necesitas ayuda?</string>
    <string name="order_title">Historial de compras</string>

    <string name="order_status_ordered">Pedido</string>
    <string name="order_status_preparing">Preparando</string>
    <string name="order_status_sent">Enviado</string>
    <string name="order_status_delivered">Entregado</string>
    <string name="order_status_unknown">Desconocido</string>

    <string name="track_title">Rastreo</string>

    <string name="notification_channel_id_default">general</string>
    <string name="notification_channel_name_default">Generales</string>
    <string name="hint_full_name">nombre completo</string>
    <string name="hint_photo_url">URL de foto</string>
    <string name="profile_update">Actualizar</string>
    <string name="profile_title">Perfil de usuario</string>
    <string name="take_profile_picture">Tomar foto de perfil</string>
    <string name="update_profile">Tomar foto de perfil</string>
    <string name="pref_fcm_title">Recibir notificaciones</string>
    <string name="pref_offers_key">pref_offers</string>
    <string name="pref_offers_title">Ofertas y promociones</string>
    <string name="product_menu_setting">Configuración</string>
    <string name="setting_topic_offers">topic_offers</string>


</resources>