<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/common_padding_min"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton

            android:id="@+id/btnTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_track_shipment"
            app:icon="@drawable/ic_local_shipping"
            app:iconGravity="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            />

        <com.google.android.material.textview.MaterialTextView

            android:id="@+id/tvStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order_status"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnTrack"
            app:layout_constraintTop_toTopOf="@+id/btnTrack"
            app:layout_constraintBottom_toBottomOf="@+id/btnTrack"

            />


        <com.google.android.material.textview.MaterialTextView

            android:id="@+id/tvId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order_id"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <com.google.android.material.textview.MaterialTextView

            android:id="@+id/tvProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Pizza hawaiana, carne wagyu"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvId"

            />
        

        <com.google.android.material.chip.Chip

            android:id="@+id/chpChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_chat_help"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProductName"
            app:layout_constraintBottom_toTopOf="@id/btnTrack"

            />

        <com.google.android.material.textview.MaterialTextView

            android:id="@+id/tvTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_full_cart"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/chpChat"
            app:layout_constraintBottom_toBottomOf="@id/chpChat"


            />





    </androidx.constraintlayout.widget.ConstraintLayout>



</com.google.android.material.card.MaterialCardView>