<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.store.storeFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotal"
        android:layout_width="0dp"
        android:text="@string/product_empty_cart"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/common_padding_default"
        android:layout_marginEnd="@dimen/common_padding_min"
        android:layout_height="@dimen/product_preview_cart_height"
        app:layout_constraintEnd_toStartOf="@id/btnViewCart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnViewCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:layout_marginStart="@dimen/common_padding_min"
        android:text="@string/producto_view_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotal"
        app:layout_constraintTop_toTopOf="@id/tvTotal"


        />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvProducts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvTotal"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_product"
            />

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/llprogress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="visible"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_msg_loading"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>