<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true"

    >

    <ImageView

        android:id="@+id/imgProduct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        android:background="@color/gray_100"

        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        android:layout_marginTop="@dimen/common_padding_default"
        tools:text="Nombre del producto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProduct"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/efab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_add_to_cart"
        android:textAlignment="center"
        app:icon="@drawable/ic_add_shopping_cart"
        app:iconTint="@color/white"
        android:textColor="@color/white"
        app:iconGravity="textEnd"
        android:layout_marginBottom="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:id="@+id/ibSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_remove_circle"
        android:background="?attr/selectableItemBackground"
        android:layout_marginBottom="18dp"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintBottom_toTopOf="@id/efab"

        />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/tilNewQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_min"
        app:layout_constraintStart_toEndOf="@id/ibSub"
        app:layout_constraintTop_toTopOf="@id/ibSub"
        app:layout_constraintBottom_toTopOf="@id/ibSub"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textAlignment="center"
            tools:text="5" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/ibSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_padding_min"
        android:src="@drawable/ic_add_circle"
        android:background="?attr/selectableItemBackground"
        android:layout_marginStart="@dimen/common_padding_min"
        app:layout_constraintStart_toEndOf="@+id/tilNewQuantity"
        app:layout_constraintTop_toTopOf="@+id/ibSub"
        app:layout_constraintBottom_toBottomOf="@+id/ibSub"
        />
    
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/detail_quantity"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintEnd_toEndOf="@id/tvName"
        app:layout_constraintBottom_toTopOf="@id/ibSub"

        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_total_price"
        android:layout_marginStart="@dimen/common_padding_default"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        app:layout_constraintStart_toEndOf="@+id/ibSum"
        app:layout_constraintEnd_toEndOf="@id/tvName"
        app:layout_constraintTop_toTopOf="@+id/ibSub"
        app:layout_constraintBottom_toBottomOf="@+id/ibSub"


        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintEnd_toEndOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintBottom_toTopOf="@+id/tilNewQuantity"
        >


        <com.google.android.material.textview.MaterialTextView

            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?attr/textAppearanceBody1"
            tools:text="Descripcion del producto"

            />

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>